--- a/doc/project/todo.txt
+++ b/doc/project/todo.txt
@@ -9,13 +9,15 @@ Lisää tehtävät OpenOfficesta todo.txt:n
 Joonas
 =============
 
-
-
+- Synccaa teemasta uusimmat js:t
+- index.html
+- "license.txt"
+- Guiden intro-chapteri
 
 
 Jouni
 =============
 
-
+- Teema
 
 
